# hybrid-intelligent-warehouse-system

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/knowledge_base/: mivar_vso.json  rules.json
data/mock/: README.md  historical_orders.csv  orders.json  products.json  robots.json  scenarios.json  shelves.json  warehouse_paths.json  zones.json
data/mock/shelf_images/: README.md  manifest.json
data/processed/: forecasting_metrics.json  full_system_demo.json  ml_end_to_end_demo.json  ml_integration_report.json  shelf_recognition_report.json
docs/: architecture.md  data_contracts.md  data_dictionary.md  demo_guide.md  final_system_analysis.md  ml_contracts_final.md  ml_evaluation.md  project_scope.md  roadmap.md  system_flow.md  system_scenarios.md
scripts/: evaluate_forecasting_model.py  run_backend.py  run_full_demo.py  run_ml_end_to_end_demo.py  train_forecasting_model.py  validate_ml_integration.py  validate_mock_data.py  validate_schemas.py  validate_shelf_recognition.py
src/hybrid_warehouse/assignment/: __init__.py  decision.py  ranking.py  replanning.py
src/hybrid_warehouse/backend/: __init__.py  api.py  orchestrator.py
src/hybrid_warehouse/database/: __init__.py  (+1 more)
tests/integration/: test_api.py  test_full_pipeline.py  test_ml_end_to_end_demo.py  test_system_scenarios.py
tests/unit/: test_assignment.py  test_database.py  test_expert_system.py  test_forecasting.py  test_ml_contract_boundaries.py  test_ml_integration.py  test_routing.py  test_schemas.py  test_shelf_recognition.py
(+31 files in other folders)
